metadata/force-app/main/default/objects/CustomName_sfjTv__c/CustomName_sfjTv__c.object-meta.xml
<CustomObject>
    <description>Description_esPPi</description>
    <label>CustomLabel_Mqlpo</label>
    <nameField>
        <label>CustomLabel_Mqlpo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Mqlpos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>