metadata/force-app/main/default/objects/CustomName_sfjTv__c/fields/CustomField_dcrBs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_dcrBs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldrsGmr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>