metadata/force-app/main/default/objects/CustomName_sfjTv__c/fields/CustomField_ZlFgd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ZlFgd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvzswB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>